# Voltgrid

./: .env.example  .gitignore  README.md  docker-compose.yml  ⚡ VoltGrid — EV Charging Station Platform 37d1c6b4f8b581d0a027da42234d8fcd.md
voltgrid-api/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt
voltgrid-api/app/: __init__.py
voltgrid-api/app/api/: deps.py
voltgrid-api/app/api/routers/: __init__.py  analytics.py  auth.py  health.py  organizations.py  sso.py  (+5 more)
voltgrid-api/app/auth/: oauth.py
voltgrid-api/app/core/: config.py  security.py
voltgrid-api/app/db/: base.py  session.py  tenant.py
voltgrid-api/app/models/: __init__.py  enums.py  mixins.py  organization.py  refresh_token.py  scheduler_config.py  session.py  station.py  status_log.py  user.py
voltgrid-api/app/realtime/: connection_manager.py
voltgrid-api/app/scheduler/: jobs.py  manager.py
voltgrid-api/app/schemas/: analytics.py  auth.py  common.py  organization.py  scheduler.py  session.py  station.py  user.py
voltgrid-api/app/services/: analytics_service.py  auth_service.py  organization_service.py  scheduler_service.py  session_service.py  sso_service.py  station_service.py  user_service.py
voltgrid-api/migrations/: env.py
voltgrid-api/migrations/versions/: 0001_initial_schema.py  0002_enable_rls.py
voltgrid-api/scripts/: seed.py
voltgrid-api/tests/: conftest.py
voltgrid-api/tests/integration/: test_auth_flow.py  test_stations_crud.py  test_tenant_isolation.py
voltgrid-api/tests/unit/: test_security.py
(+96 files in other folders)
